<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/second"
android:gravity="center_horizontal"
android:orientation="vertical"
tools:context=".Multiplication">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/score"
        android:textColor="#CACACA"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="0"
        android:textColor="#CACACA"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/live"
        android:textColor="#CACACA"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="3"
        android:textColor="#CACACA"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/time"
        android:textColor="#CACACA"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="60"
        android:textColor="#CACACA"
        android:textSize="20dp" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:shadowColor="#E8E8E8"
        android:text="TextView"
        android:textColor="#C6C6C6"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E4E4E4"
        android:textSize="20sp"
        android:textStyle="bold|italic" />
</LinearLayout>

<EditText
    android:id="@+id/editAnswer"
    android:layout_width="216dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/answer"
    android:inputType="number"
    android:textColor="#FFFFFF"
    android:textColorHint="#A9CACACA"
    android:textSize="24sp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:backgroundTint="#49A8A8"
        android:text="@string/btnSubmit" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:backgroundTint="#49A8A8"
        android:text="@string/btnNext" />
</LinearLayout>
</LinearLayout>

