<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/third"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Result">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:gravity="center"
        android:text="@string/conResult"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scoreResult"
            android:textColor="#171717"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFinalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="#171717"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAgain"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btnAgain"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btnExit"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>